force-app/main/default/objects/VOB__c/VOB__c.object-meta.xml
<CustomObject>
    <label>VOB</label>
    <nameField>
        <displayFormat>VOB-{00000000}</displayFormat>
        <label>VOB Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOBS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>