force-app/main/default/objects/VOB__c/fields/Admission_Location__c.field-meta.xml
<CustomField>
    <fullName>Admission_Location__c</fullName>
    <label>Admission Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>