force-app/main/default/objects/VOB__c/fields/BCBS_Other__c.field-meta.xml
<CustomField>
    <fullName>BCBS_Other__c</fullName>
    <label>BCBS Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BCBS_Global</valueSetName>
    </valueSet>
</CustomField>