force-app/main/default/objects/VOB__c/fields/Created_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Me__c</fullName>
    <formula>CreatedBy.Username = $User.Id</formula>
    <label>Created by Me?</label>
    <type>Checkbox</type>
</CustomField>