force-app/main/default/objects/VOB__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Not Contracted</fullName>
                <label>Pt Insurance Not In-network</label>
            </value>
            <value>
                <fullName>Insurance inactive</fullName>
            </value>
            <value>
                <fullName>Patient&apos;s policy not in network</fullName>
                <label>Pt Plan Not In-network</label>
            </value>
            <value>
                <fullName>Patient&apos;s plan administered by a TPA, cannot accept</fullName>
            </value>
            <value>
                <fullName>IHAT Services Not Covered at POS Home</fullName>
            </value>
            <value>
                <fullName>IHAT Codes Not Covered</fullName>
            </value>
            <value>
                <fullName>HWM Codes Not Covered</fullName>
            </value>
            <value>
                <fullName>IHWM Services Not Covered at POS Home</fullName>
            </value>
            <value>
                <fullName>COB Needed, unable to verify primary insurance benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>