force-app/main/default/objects/VOB__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>