force-app/main/default/objects/VOB__c/fields/IHAT_Codes__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Codes__c</fullName>
    <label>IHAT Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H0004</fullName>
            </value>
            <value>
                <fullName>H0006</fullName>
            </value>
            <value>
                <fullName>90899</fullName>
            </value>
            <value>
                <fullName>H0015</fullName>
            </value>
            <value>
                <fullName>S9475</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>