force-app/main/default/objects/VOB__c/fields/IHAT_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Coinsurance__c</fullName>
    <label>IHAT Coinsurance %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>