force-app/main/default/objects/VOB__c/fields/IHAT_Copay__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Copay__c</fullName>
    <label>IHAT Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>