force-app/main/default/objects/VOB__c/fields/IHAT_Deductible_Applied_to_OOP__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Deductible_Applied_to_OOP__c</fullName>
    <label>IHAT Deductible Applied to OOP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>