force-app/main/default/objects/VOB__c/fields/IHAT_Family_Out_of_Pocket_Amount_Met__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Family_Out_of_Pocket_Amount_Met__c</fullName>
    <label>IHAT Family Out of Pocket Amount Met</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>