force-app/main/default/objects/VOB__c/fields/IHAT_In_Network__c.field-meta.xml
<CustomField>
    <fullName>IHAT_In_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IHAT In Network?</label>
    <type>Checkbox</type>
</CustomField>