force-app/main/default/objects/VOB__c/fields/IHAT_Individual_Out_Of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Individual_Out_Of_Pocket__c</fullName>
    <label>IHAT Individual Out Of Pocket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>