force-app/main/default/objects/VOB__c/fields/IHAT_Individual_Out_Of_Pocket_Amount_Met__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Individual_Out_Of_Pocket_Amount_Met__c</fullName>
    <label>IHAT Individual Out Of Pocket Amount Met</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>