force-app/main/default/objects/VOB__c/fields/IHAT_Indvidual_Deductible__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Indvidual_Deductible__c</fullName>
    <label>IHAT Indvidual Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>