force-app/main/default/objects/VOB__c/fields/IHAT_Notes__c.field-meta.xml
<CustomField>
    <fullName>IHAT_Notes__c</fullName>
    <label>IHAT Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>