force-app/main/default/objects/VOB__c/fields/IHWM_Codes__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Codes__c</fullName>
    <label>IHWM Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99211</fullName>
            </value>
            <value>
                <fullName>99215</fullName>
            </value>
            <value>
                <fullName>H0014</fullName>
            </value>
            <value>
                <fullName>S9475</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>