force-app/main/default/objects/VOB__c/fields/IHWM_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Coinsurance__c</fullName>
    <label>IHWM Coinsurance%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>