force-app/main/default/objects/VOB__c/fields/IHWM_Copay__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Copay__c</fullName>
    <label>IHWM Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>