force-app/main/default/objects/VOB__c/fields/IHWM_Family_Deductible__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Family_Deductible__c</fullName>
    <label>IHWM Family Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>