force-app/main/default/objects/VOB__c/fields/IHWM_In_Network__c.field-meta.xml
<CustomField>
    <fullName>IHWM_In_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IHWM In Network?</label>
    <type>Checkbox</type>
</CustomField>