force-app/main/default/objects/VOB__c/fields/IHWM_Individual_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Individual_Out_of_Pocket__c</fullName>
    <label>IHWM Individual Out of Pocket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>