force-app/main/default/objects/VOB__c/fields/IHWM_Individual_Out_of_Pocket_Amount_Met__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Individual_Out_of_Pocket_Amount_Met__c</fullName>
    <label>IHWM Individual Out of Pocket Amount Met</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>