force-app/main/default/objects/VOB__c/fields/IHWM_Notes__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Notes__c</fullName>
    <label>IHWM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>