force-app/main/default/objects/VOB__c/fields/IHWM_PCP_Referral_Required__c.field-meta.xml
<CustomField>
    <fullName>IHWM_PCP_Referral_Required__c</fullName>
    <label>IHWM PCP Referral Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>