force-app/main/default/objects/VOB__c/fields/IHWM_Services_Code_Allowed_at_POS_Home__c.field-meta.xml
<CustomField>
    <fullName>IHWM_Services_Code_Allowed_at_POS_Home__c</fullName>
    <label>IHWM Services/Code Allowed at POS Home?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>