force-app/main/default/objects/VOB__c/fields/Insurance_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Address__c</fullName>
    <label>Insurance Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>