force-app/main/default/objects/VOB__c/fields/Insurance_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier_Name__c</fullName>
    <label>Insurance Carrier Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Ambetter</fullName>
            </value>
            <value>
                <fullName>Anthem</fullName>
            </value>
            <value>
                <fullName>Beacon Health Options</fullName>
            </value>
            <value>
                <fullName>BCBS Other</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Connecticare</fullName>
            </value>
            <value>
                <fullName>Harvard Pilgrim</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Magellan</fullName>
            </value>
            <value>
                <fullName>Medicaid/State Insurance</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>MED MUTUAL OF OHIO</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>Tufts</fullName>
            </value>
            <value>
                <fullName>Unicare</fullName>
            </value>
            <value>
                <fullName>UnitedHealthCare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>