force-app/main/default/objects/VOB__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <formula>Lead__r.Owner:User.FirstName  &amp;&quot; &quot;&amp;  Lead__r.Owner:User.LastName</formula>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>