force-app/main/default/objects/VOB__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>MemberID/Policy#</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>