force-app/main/default/objects/VOB__c/fields/Pt_Relationship_to_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Pt_Relationship_to_Subscriber__c</fullName>
    <label>Pt Relationship to Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>