force-app/main/default/objects/VOB__c/fields/Renews_On__c.field-meta.xml
<CustomField>
    <fullName>Renews_On__c</fullName>
    <label>Renews On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar Year</fullName>
            </value>
            <value>
                <fullName>Plan Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>