force-app/main/default/objects/VOB__c/fields/Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Representative_Name__c</fullName>
    <label>Representative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>