force-app/main/default/objects/VOB__c/fields/Subscriber_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Member_ID__c</fullName>
    <label>Subscriber Member ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>