force-app/main/default/objects/VOB__c/fields/VOB_Summary__c.field-meta.xml
<CustomField>
    <fullName>VOB_Summary__c</fullName>
    <label>VOB Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>