force-app/main/default/objects/VOB__c/fields/VTX_Facility__c.field-meta.xml
<CustomField>
    <fullName>VTX_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VTX Facility</label>
    <referenceTo>VerifyTx__VTX_Facility__c</referenceTo>
    <relationshipLabel>VOBS</relationshipLabel>
    <relationshipName>VOBS</relationshipName>
    <type>Lookup</type>
</CustomField>