force-app/main/default/objects/VOB__c/fields/VTX_Payer__c.field-meta.xml
<CustomField>
    <fullName>VTX_Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VTX Payer</label>
    <referenceTo>VerifyTx__VTX_Payer_Detail__c</referenceTo>
    <relationshipLabel>VOBS</relationshipLabel>
    <relationshipName>VOBS</relationshipName>
    <type>Lookup</type>
</CustomField>