force-app/main/default/objects/VOB__c/validationRules/Denial_Reason_Required_to_Deny_VOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Denial_Reason_Required_to_Deny_VOB</fullName>
    <active>true</active>
    <description>This rule will prevent users from denying VOB&apos;s without providing denial reason</description>
    <errorConditionFormula>ISPICKVAL(Outcome__c, &apos;Denied&apos;)&amp;&amp; ISBlank(Denial_Reason__c)</errorConditionFormula>
    <errorDisplayField>Denial_Reason__c</errorDisplayField>
    <errorMessage>Denial reason is required when outcome is denied</errorMessage>
</ValidationRule>