force-app/main/default/objects/VOB__c/validationRules/Intake_User_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Intake_User_Validation</fullName>
    <active>true</active>
    <description>Prevent intake users from modifying status after VOB is requested.</description>
    <errorConditionFormula>$Profile.Name  = &quot;Aware Intake User&quot; &amp;&amp; not (ISPICKVAL(Status__c, &quot;canceled&quot;)) &amp;&amp; not (ISPICKVAL(Status__c, &quot;new&quot;))</errorConditionFormula>
    <errorMessage>You do not have permission to perform this action.</errorMessage>
</ValidationRule>