force-app/main/default/objects/VOB__c/validationRules/LeadCantBeChangedinVOB.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadCantBeChangedinVOB</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Lead__c )</errorConditionFormula>
    <errorDisplayField>Lead__c</errorDisplayField>
    <errorMessage>The lead cannot be changed on a VOB.</errorMessage>
</ValidationRule>