force-app/main/default/objects/VOB__c/validationRules/Representative_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Representative_Name_Required</fullName>
    <active>false</active>
    <description>Representative name is required is there is an outcome</description>
    <errorConditionFormula>not(ISPICKVAL( Outcome__c , &quot;&quot;) )&amp;&amp; ISBLANK( Representative_Name__c )</errorConditionFormula>
    <errorDisplayField>Representative_Name__c</errorDisplayField>
    <errorMessage>Representative name is required in order to record outcome.</errorMessage>
</ValidationRule>