force-app/main/default/objects/VOB__c/validationRules/VOB_Completed_Plan_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>VOB_Completed_Plan_Type</fullName>
    <active>true</active>
    <description>Fields must be filled in for vob to be completed status</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;completed&quot;)  &amp;&amp; (ISPICKVAL( Plan_Type__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Insurance_Status__c</errorDisplayField>
    <errorMessage>Please select the insurance status.</errorMessage>
</ValidationRule>