force-app/main/default/objects/VOB__c/validationRules/VOB_Completed_Ref_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>VOB_Completed_Ref_Number</fullName>
    <active>true</active>
    <description>Fields must be filled in for vob to be completed status</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;completed&quot;) &amp;&amp; (ISBLANK( Reference__c ))</errorConditionFormula>
    <errorDisplayField>Reference__c</errorDisplayField>
    <errorMessage>Please enter the reference number for the call</errorMessage>
</ValidationRule>