force-app/main/default/objects/VOB__c/validationRules/VOB_Completed_Rep_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>VOB_Completed_Rep_Name</fullName>
    <active>true</active>
    <description>Fields must be filled in for vob to be completed status</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;completed&quot;) &amp;&amp; (ISBLANK(Representative_Name__c))</errorConditionFormula>
    <errorDisplayField>Representative_Name__c</errorDisplayField>
    <errorMessage>Please enter the name of the insurance representative</errorMessage>
</ValidationRule>