force-app/main/default/objects/VOB__c/validationRules/VOB_Status_Cov_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>VOB_Status_Cov_Start</fullName>
    <active>true</active>
    <description>Fields must be filled in for vob to be completed status</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;completed&quot;)  &amp;&amp; (ISBLANK( Coverage_Start_Date__c))</errorConditionFormula>
    <errorDisplayField>Coverage_Start_Date__c</errorDisplayField>
    <errorMessage>Please enter the Coverage Start Date</errorMessage>
</ValidationRule>