force-app/main/default/objects/VOB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Admission_Location__c</columns>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Insurance_Carrier_Name__c</columns>
    <columns>Policy__c</columns>
    <columns>Group__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Insurance,Pending Admissions</value>
    </filters>
    <label>All Pending VOBs</label>
</ListView>